Replace Java 11 call